@@ -296,18 +296,23 @@ module Gluon
 
     def location(path)
       path = '/' if path.empty?
+      @logger.debug("response location: #{path}") if @logger.debug?
       @res['Location'] = path
       @res.status = 302
       self
     end
 
     def redirect_to(page_type)
+      @logger.debug("redirect to `#{page_type}'") if @logger.debug?
       location(@req.script_name + @dispatcher.class2path(page_type))
     end
 
+    # :stopdoc:
     SWITCH_LABEL = :gluon_switch
+    # :startdoc:
 
     def switch_to(page_type)
+      @logger.debug("switch to `#{page_type}'") if @logger.debug?
       throw(SWITCH_LABEL, page_type)
     end
 
